applications/arr-stack/base/tdarr/service-nodeport.yaml
---
# NodePort service for external Tdarr nodes (Windows, etc.)
# Exposes server port 8266 for node registration
apiVersion: v1
kind: Service
metadata:
  name: tdarr-external
  labels:
    app: tdarr
    app.kubernetes.io/name: tdarr
    app.kubernetes.io/component: external-access
spec:
  type: NodePort
  ports:
    - name: server
      port: 8266
      targetPort: server
      nodePort: 30266  # Easy to remember: 30 + 266
      protocol: TCP
  selector:
    app: tdarr
