applications/arr-stack/base/tdarr/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tdarr
  labels:
    app: tdarr
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`tdarr.talos00`)
      kind: Rule
      services:
        - name: tdarr
          port: 8265
